Tratamento de respostas HTTP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImproveNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 server.port=8082
+
+server.error.include-stacktrace=never
